--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The boilerplate & toolset to make [pixi.js] running with !",
   "main": "src/index.js",
   "scripts": {
+    "start": "gulp",
     "test": "xo && mocha"
   },
   "keywords": [
@@ -48,20 +49,25 @@
   },
   "devDependencies": {
     "babel-plugin-glslify": "^1.0.2",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.13.2",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.12.8",
-    "browserify": "^13.0.1",
-    "del": "^2.2.0",
-    "exorcist": "^0.4.0",
+    "browserify": "^13.1.0",
+    "del": "^2.2.1",
     "glslify-babel": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
-    "gulp-if": "^2.0.1",
+    "gulp-header": "^1.8.7",
+    "gulp-insert-lines": "0.0.4",
     "gulp-jsdoc3": "^0.3.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "lodash": "^4.14.2",
+    "lodash.assign": "^4.1.0",
+    "mocha": "^3.0.2",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
     "xo": "^0.16.0"
   }
 }
